--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "feather-icons": "^4.24.1",
+        "jquery-ui": "^1.12.1",
+        "jquery-ui-dist": "^1.12.1"
     }
 }
