--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,26 @@
+# Check if .gitignore exists
+ls -la | grep gitignore
+
+# If it doesn't exist, create it
+cat > .gitignore << 'EOF'
 /node_modules
 /public/hot
 /public/storage
 /storage/*.key
+/vendor
 .env
+.env.backup
+.env.production
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+/.fleet
+/.idea
+/.vscode
+.DS_Store
+/composer.lock
+/package-lock.json
+yarn.lock
+EOF
